--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.java.installations.auto-detect=false
 org.gradle.java.installations.auto-download=false
 org.gradle.java.installations.fromEnv=LTS_JDK8,LTS_JDK11,LTS_JDK17,LTS_JDK21
-version=2.73.8-SNAPSHOT
+version=2.73.8
 maxVersion=2.73.9
 org.gradle.jvmargs=-Xmx2g
 org.gradle.parallel=false
