--- a/core/build.gradle
+++ b/core/build.gradle
@@ -43,6 +43,23 @@ dependencies {
 
 jar {
     from sourceSets.main.output
+    into('META-INF/versions/9') {
+        from sourceSets.java9.output
+    }
+
+    String v = "${rootProject.extensions.ext.bundle_version}"
+    manifest.attributes('Multi-Release': 'true')
+    manifest.attributes('Bundle-Name': 'bccore')
+    manifest.attributes('Bundle-SymbolicName': 'bccore')
+    manifest.attributes('Bundle-RequiredExecutionEnvironment': 'JavaSE-1.8')
+    manifest.attributes('Export-Package': "!org.bouncycastle.internal.*,org.bouncycastle.*;version=${v}")
+    manifest.attributes('Import-Package': 'java.*;resolution:=optional,javax.*;resolution:=optional')
+    manifest.attributes('Bundle-Version': "${v}")
+    manifest.attributes('Permissions': 'all-permissions')
+    manifest.attributes('Codebase': '*')
+    manifest.attributes('Application-Library-Allowable-Codebase': '*')
+    manifest.attributes('Caller-Allowable-Codebase': '*')
+    manifest.attributes('Trusted-Library': 'true')
 }
 
 compileJava {
@@ -98,6 +115,10 @@ task cleanNative(type: Delete) {
 
 
 task('copyJars', type: Copy) {
+    dependsOn("jar")
+    dependsOn("sourcesJar")
+    dependsOn("javadocJar")
+
     from new File(projectDir, "build/libs")
     into new File(rootDir, "../bc-lts-java-jars/${version}/")
 }
