--- a/jmail/build.gradle
+++ b/jmail/build.gradle
@@ -129,6 +129,10 @@ artifacts {
 }
 
 task('copyJars', type: Copy) {
+    dependsOn("jar")
+    dependsOn("sourcesJar")
+    dependsOn("javadocJar")
+
     from new File(projectDir, "build/libs")
     into new File(rootDir, "../bc-lts-java-jars/${version}/")
 }
