--- a/mail/build.gradle
+++ b/mail/build.gradle
@@ -105,6 +105,10 @@ artifacts {
 }
 
 task('copyJars', type: Copy) {
+    dependsOn("jar")
+    dependsOn("sourcesJar")
+    dependsOn("javadocJar")
+
     from new File(projectDir, "build/libs")
     into new File(rootDir, "../bc-lts-java-jars/${version}/")
 }
