--- a/core/build.gradle
+++ b/core/build.gradle
@@ -10,7 +10,7 @@ jar.archiveBaseName = "bccore-lts$vm_range"
 sourceSets {
     java9 {
         java {
-            srcDirs = ['src/main/java9']
+            srcDirs = ['src/main/jdk1.9']
         }
     }
 }
@@ -97,7 +97,7 @@ compileJava9Java {
         languageVersion = JavaLanguageVersion.of(11)
     }
     options.release = 9
-    options.sourcepath = files(['src/main/java', 'src/main/java9'])
+    options.sourcepath = files(['src/main/java', 'src/main/jdk1.9'])
 }
 
 
