--- a/util/build.gradle
+++ b/util/build.gradle
@@ -52,14 +52,14 @@ jar {
         from sourceSets.java9.output
     }
 
-    String packages = 'org.bouncycastle.asn1.{bsi|cmc|cmp|cms|crmf|cryptlib|dvcs|eac|edec|esf|ess|est|gnu|iana|icao|isara|isismtt|iso|kisa|microsoft|misc|mozilla|nsri|ntt|oiw|rosstandart|smime|tsp}.*'
+    String packages = 'org.bouncycastle.asn1.{bsi|cmc|cmp|cms|crmf|dvcs|eac|esf|ess|est|icao|isismtt|smime|tsp}.*'
     String v = "${rootProject.extensions.ext.bundle_version}"
     manifest.attributes('Multi-Release': 'true')
     manifest.attributes('Bundle-Name': 'bcutil')
     manifest.attributes('Bundle-SymbolicName': 'bcutil')
     manifest.attributes('Bundle-RequiredExecutionEnvironment': 'JavaSE-1.8')
     manifest.attributes('Export-Package': "${packages};version=${v},org.bouncycastle.oer.*;version=${v}")
-    manifest.attributes('Import-Package': "java.*;resolution:=optional,javax.*;resolution:=optional,!${packages},!org.bouncycastle.oer.*,org.bouncycastle.*;version=\"[${v},${maxVersion})\"")
+    manifest.attributes('Import-Package': "java.*;resolution:=optional,!${packages},!org.bouncycastle.oer.*,org.bouncycastle.*;version=\"[${v},${maxVersion})\"")
     manifest.attributes('Bundle-Version': "${v}")
     manifest.attributes('Permissions': 'all-permissions')
     manifest.attributes('Codebase': '*')
