--- a/tls/build.gradle
+++ b/tls/build.gradle
@@ -103,6 +103,20 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
     from javadoc.destinationDir
 }
 
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = 'org.bouncycastle'
+            artifactId = "bctls-lts$vm_range"
+            from components.java
+    
+            artifact(javadocJar)
+            artifact(sourcesJar)
+        }
+    
+    }
+}
+
 artifacts {
     archives jar
     archives javadocJar
