--- a/util/build.gradle
+++ b/util/build.gradle
@@ -88,6 +88,20 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
     from javadoc.destinationDir
 }
 
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = 'org.bouncycastle'
+            artifactId = "bcutil-lts$vm_range"
+            from components.java
+    
+            artifact(javadocJar)
+            artifact(sourcesJar)
+        }
+    
+    }
+}
+
 artifacts {
     archives jar
     archives javadocJar
